--- a/pages/beranda/index.html
+++ b/pages/beranda/index.html
@@ -81,10 +81,10 @@
             <div class="body-section reference-widget">
               <div class="btn-reference-group">
                 <div class="btn-reference">
-                  <a href="#">Alquran (Rilis Kemenag)</a>
+                  <a href="../alquran/">Alquran (Rilis Kemenag)</a>
                 </div>
                 <div class="btn-reference">
-                  <a href="#">Hadis (Sahih Bukhari)</a>
+                  <a href="../hadis/">Hadis (Sahih Bukhari)</a>
                 </div>
               </div>
             </div>
@@ -93,19 +93,19 @@
 
         <div class="navigation">
           <div class="item">
-            <a href="#">
+            <a href="../hadis/">
               <div class="icon"><i class="bi bi-journal-text"></i></div>
               <p>Hadis</p>
             </a>
           </div>
           <div class="item">
-            <a href="#">
+            <a href="">
               <div class="icon"><i class="bi bi-house"></i></div>
               <p>Beranda</p>
             </a>
           </div>
           <div class="item">
-            <a href="#">
+            <a href="../alquran/">
               <div class="icon"><i class="bi bi-book"></i></div>
               <p>Alquran</p>
             </a>
