form cari ayat al quran

--- a/pages/alquran/surat/index.html
+++ b/pages/alquran/surat/index.html
@@ -57,6 +57,10 @@
             </div>
           </div>
         </div>
+        <div class="jump-verse">
+          <input type="number" placeholder="Masukkan ayat" />
+          <button><i class="bi bi-search"></i></button>
+        </div>
       </div>
     </div>
   </body>
