--- a/pages/alquran/index.html
+++ b/pages/alquran/index.html
@@ -21,72 +21,12 @@
           </form>
         </div>
         <div class="item-wrapper">
-          <a href="./surat/">
+          <span>
             <div class="item">
               <p class="arabic">1 Al Fatihah</p>
               <p class="translation">Pembukaan</p>
             </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
-          <a href="">
-            <div class="item">
-              <p class="arabic">1 Al Fatihah</p>
-              <p class="translation">Pembukaan</p>
-            </div>
-          </a>
+          </span>
         </div>
       </div>
       <!-- navigation -->
