--- a/pages/alquran/surat/index.html
+++ b/pages/alquran/surat/index.html
@@ -13,41 +13,17 @@
       <div class="container detail-quran-wrapper">
         <div class="header-detail">
           <div class="btn-back">
-            <a href="../"><i class="icon bi bi-arrow-left-circle"></i></a>
+            <span><i class="icon bi bi-arrow-left-circle"></i></span>
           </div>
           <div class="surah">
             <p class="title">Al Fatihah</p>
-            <p class="translation">Pembukaan</p>
+            <p class="translation">Pembukaan - 7 Ayat</p>
           </div>
           <div class="btn-back">
-            <a href="../../beranda/"><i class="icon bi bi-house"></i></a>
+            <span><i class="icon bi bi-house"></i></span>
           </div>
         </div>
         <div class="item-wrapper">
-          <div class="item">
-            <div class="verse">Ayat 1</div>
-            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
-            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
-            <div class="translation">
-              Segala puji bagi Allah, Tuhan seluruh alam,
-            </div>
-          </div>
-          <div class="item">
-            <div class="verse">Ayat 1</div>
-            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
-            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
-            <div class="translation">
-              Segala puji bagi Allah, Tuhan seluruh alam,
-            </div>
-          </div>
-          <div class="item">
-            <div class="verse">Ayat 1</div>
-            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
-            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
-            <div class="translation">
-              Segala puji bagi Allah, Tuhan seluruh alam,
-            </div>
-          </div>
           <div class="item">
             <div class="verse">Ayat 1</div>
             <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
