--- a/pages/hadis/index.html
+++ b/pages/hadis/index.html
@@ -20,6 +20,14 @@
             <button class="search-button"><i class="bi bi-search"></i></button>
           </form>
         </div>
+
+        <div class="limit">
+          <input
+            type="number"
+            placeholder="Batasi hasil pencarian (maks. 8007)"
+            name="limit"
+          />
+        </div>
         <div class="content-hadith">
           <h1>Hasil Pencarian</h1>
           <div class="item-wrapper">
