--- a/pages/masuk/index.html
+++ b/pages/masuk/index.html
@@ -14,21 +14,31 @@
         <div class="login-box">
           <h1>Selamat Datang</h1>
           <p>Yuk, isi identitasmu dahulu!</p>
-          <input type="text" placeholder="Nama" class="form-control" />
-          <input type="text" placeholder="Pekerjaan" class="form-control"/>
-          <select name="" id=" class="form-control">
-            <option value="">Pilih Kota Terdekat</option>
-            <option value="">Bandung</option>
-            <option value="">Jakarta</option>
-            <option value="">Surabaya</option>
-            <option value="">Makassar</option>
-            <option value="">Jayapura</option>
+          <input
+            type="text"
+            placeholder="Nama"
+            class="form-control"
+            name="name"
+          />
+          <input
+            type="text"
+            placeholder="Pekerjaan"
+            class="form-control"
+            name="profession"
+          />
+          <select name="location" class="form-control">
+            <option>Pilih Kota Terdekat</option>
+            <option value="Bandung">Bandung</option>
+            <option value="Jakarta">Jakarta</option>
+            <option value="Surabaya">Surabaya</option>
+            <option value="Medan">Medan</option>
+            <option value="Jayapura">Jayapura</option>
           </select>
-          <a href="../beranda/"><button class="form-control">Masuk</button></a>
+          <span><button class="form-control">Masuk</button></span>
         </div>
         <div class="footer-login">
           <h1>Daily Prayer</h1>
-          <p>oleh <a href="https://estotriramdani.github">Esto Triramdani N</a></p>
+          <p>oleh <span>Esto Triramdani N</span></p>
         </div>
       </div>
     </div>
