--- a/pages/beranda/index.html
+++ b/pages/beranda/index.html
@@ -18,7 +18,7 @@
           </div>
           <div class="is-you">
             Bukan Anda? <br />
-            <a href="#">Logout</a>
+            <span>Logout</span>
           </div>
         </div>
         <div class="content-wrapper">
@@ -81,10 +81,10 @@
             <div class="body-section reference-widget">
               <div class="btn-reference-group">
                 <div class="btn-reference">
-                  <a href="../alquran/">Alquran (Rilis Kemenag)</a>
+                  <span>Alquran (Rilis Kemenag)</span>
                 </div>
                 <div class="btn-reference">
-                  <a href="../hadis/">Hadis (Sahih Bukhari)</a>
+                  <span>Hadis (Sahih Bukhari)</span>
                 </div>
               </div>
             </div>
@@ -93,22 +93,22 @@
 
         <div class="navigation">
           <div class="item">
-            <a href="../hadis/">
+            <span>
               <div class="icon"><i class="bi bi-journal-text"></i></div>
               <p>Hadis</p>
-            </a>
+            </span>
           </div>
           <div class="item">
-            <a href="">
+            <span>
               <div class="icon"><i class="bi bi-house"></i></div>
               <p>Beranda</p>
-            </a>
+            </span>
           </div>
           <div class="item">
-            <a href="../alquran/">
+            <span>
               <div class="icon"><i class="bi bi-book"></i></div>
               <p>Alquran</p>
-            </a>
+            </span>
           </div>
         </div>
       </div>
