update hover button on quran detail

--- a/pages/alquran/surat/index.html
+++ b/pages/alquran/surat/index.html
@@ -32,6 +32,206 @@
               Segala puji bagi Allah, Tuhan seluruh alam,
             </div>
           </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
+          <div class="item">
+            <div class="verse">Ayat 1</div>
+            <div class="arabic">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
+            <div class="latin">bismillāhir-raḥmānir-raḥīm</div>
+            <div class="translation">
+              Segala puji bagi Allah, Tuhan seluruh alam,
+            </div>
+          </div>
         </div>
         <div class="jump-verse">
           <input type="number" placeholder="Masukkan ayat" />
